fix: set text white in dark mode

--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,10 @@
     @apply max-h-screen overflow-hidden text-base antialiased;
   }
 
+  body {
+    @apply dark:text-white;
+  }
+
   body:after {
     content: '';
     position: fixed;
